--- a/advanced.css
+++ b/advanced.css
@@ -4,7 +4,9 @@
   CSS for Advanced Requirement 
 */
 body{
+  color: black;
   font-size: 0; /* Removes horizontal space in between divs */
+  font-family: "Courier Lucida Console", monospace;
 }
 div{
   display: inline-block; /* Makes all divs aligned horizontally instead of vertically */
@@ -12,57 +14,52 @@ div{
 
 /* Aligns div to top left */
 .topleft{
-  position: absolute;
   top: 0%;
   left: 0%;
+  position: absolute;
 }
 
 /* Sets text properties for letters */
 .letter{
-  background-color: navy;
-  color: white;
-  font-size: 60pt;
-  font-family: 'Courier New', Courier, monospace;
   width: 100px;
   height: 180px;
-}
-
-
-/* Aligns div to bottom right and sets a border around all elements within the div */
-.bottomright{
-  border-width: 10px;
-  border-color: yellow;
-  border-style: solid;
-  position: absolute;
-  bottom: 0%;
-  right: 0%;
+  color: white;
+  background-color: navy;
+  font-size: 60pt;
+  
 }
 
 /*Sets text properties for letters when mouse cursor is hovering*/
 .letter:hover{
-  background-color: white;
   color: navy;
+  background-color: white;
+  
+}
+
+/* Aligns div to bottom right and sets a border around all elements within the div */
+.bottomright{
+  bottom: 0%;
+  right: 0%;
+  position: absolute;
+  border-style: solid; /* Border doesn't show up without this*/
+  border-width: 10px;
+  border-color: yellow;
 }
 
 /* Sets text properties for numbers */
 .number{
-  
-  background-color: black;
-  color: yellow;
-  font-size: 40pt;
-  font-family: 'Courier New', Courier, monospace;
-  height: 60px;
   width: 60px;
+  height: 60px;
+  color: yellow;
+  background-color: black;
+  font-size: 40pt;
   text-align: center;
 }
 
-
-
-
 /* Sets text properties for letters when mouse cursor is hovering */
 .number:hover{
-  background-color: yellow;
   color: black;
+  background-color: yellow;
 }
 
 
