--- a/basic.css
+++ b/basic.css
@@ -3,13 +3,16 @@
 
   CSS for Basic Requirement 
 */
-div{
-  background-color: yellow;
-  font-size: 40pt;
-  font-family: 'Courier New', Courier, monospace;
+
+/* Sets text properties for all divs*/
+.basic{
   width: 60px;
   height: 60px;
-  margin: auto;
+  color: black;
+  background-color: yellow;
+  font-size: 40pt;
+  font-family: "Courier Lucida Console", monospace;
   text-align: center;
-
+  margin: auto; /* Centers the div within window*/
+  padding: 10px;
 }
